--- a/nginx_yaml_files/deployment.yaml
+++ b/nginx_yaml_files/deployment.yaml
@@ -1,6 +1,6 @@
-apiVersion: app/v1
+apiVersion: apps/v1
 kind: Deployment
-metdata:
+metadata:
   labels:
      app: nginx
   name: nginx-deployment
